# partiql-rust-cli

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci_build_test.yml  coverage.yml
resources/: partiql-cli.toml
sample-env/: globals.env  globals.ion
src/: args.rs  error.rs  evaluate.rs  formatting.rs  lib.rs  main.rs  parse.rs  pretty.rs  repl.rs
src/repl/: config.rs  mod.rs  repl.rs
src/visualize/: ast_to_dot.rs  common.rs  mod.rs  plan_to_dot.rs  render.rs  test.rs
